--- a/OnlineStoreApp/app/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="dialog_ok">OK</string>
     <string name="dialog_yes">Yes</string>
     <string name="dialog_cancel">Cancel</string>
+    <string name="label_splash_online_store">Online Store</string>
 </resources>
