--- a/OnlineStoreApp/commonmodule/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/commonmodule/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="error_something_went_wrong">Something went wrong. Please try again.</string>
     <string name="error_rate_exceeded">You have made too many requests recently. Developer accounts are limited to 100 requests over a 24 hour period (50 requests available every 12 hours). Please upgrade to a paid plan if you need more requests
 </string>
+    <string name="error_unauthorized">Username or Password is incorrect</string>
 </resources>
