--- a/OnlineStoreApp/wishlistmodule/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/wishlistmodule/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">wishlistmodule</string>
+    <string name="error_failed_to_add_wishlist">"Failed to add to wishlist. "</string>
 </resources>
