added product details viewmodel and manager

--- a/OnlineStoreApp/cartmodule/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/cartmodule/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">cartmodule</string>
+    <string name="error_adding_to_cart_failed">Failed to add product to cart</string>
 </resources>
