added cart domain and data layer

--- a/OnlineStoreApp/cartmodule/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/cartmodule/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">cartmodule</string>
     <string name="error_adding_to_cart_failed">Failed to add product to cart</string>
+    <string name="title_cart">Cart</string>
 </resources>
