--- a/OnlineStoreApp/cartmodule/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/cartmodule/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_cart">Cart</string>
     <string name="label_remove_from_cart">Remove from Cart</string>
     <string name="label_quantity">Quantity: %1$s</string>
+    <string name="label_your_cart_is_empty">Your cart is empty</string>
 </resources>
