--- a/OnlineStoreApp/wishlistmodule/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/wishlistmodule/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="error_failed_to_add_wishlist">"Failed to add to wishlist."</string>
     <string name="error_failed_to_remove_from_wishlist">"Failed to remove from wishlist."</string>
     <string name="label_move_to_cart">Move to cart</string>
+    <string name="label_no_items_are_added_to_wishlist">No items are added to wishlist</string>
 
 </resources>
