--- a/OnlineStoreApp/productsmodule/src/main/res/values/strings.xml
+++ b/OnlineStoreApp/productsmodule/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="label_goto_cart">Goto Cart</string>
     <string name="label_add_to_cart">Add to Cart</string>
     <string name="product_added_to_cart">"Item added to cart! "</string>
+    <string name="label_no_products_found">No Products found</string>
 </resources>
